@@ -40,6 +40,11 @@ function admin_menu_toolbar_init() {
  * Implementation of hook_admin_menu_output_alter().
  */
 function admin_menu_toolbar_admin_menu_output_alter(&$content) {
+  // Add a class to top-level items for styling.
+  foreach (element_children($content['menu']) as $link) {
+    $content['menu'][$link]['#attributes']['class'][] = 'admin-menu-toolbar-category';
+  }
+
   // Alter user account link.
   $content['user']['account']['#title'] = t('Hello <strong>@username</strong>', array('@username' => $content['user']['account']['#title']));
   $content['user']['account']['#options']['html'] = TRUE;
